@@ -1,0 +1,13 @@
+# $NetBSD: Makefile,v 1.1 2019/08/13 02:19:16 brook Exp $
+
+DISTNAME=	beamerposter
+PKGNAME=	tex-${DISTNAME}-1.13
+TEXLIVE_REV=	47508
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	http://ctan.org/pkg/beamerposter
+COMMENT=	Extend beamer and a0poster for custom sized posters
+LICENSE=	gnu-gpl-v2 AND lppl-1.3c
+
+.include "../../print/texlive/package.mk"
+.include "../../mk/bsd.pkg.mk"
